--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "wanda",
   "version": "0.1.0",
   "private": true,
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,16 +12,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.8.4",
+    "@next-auth/prisma-adapter": "^1.0.3",
+    "@prisma/client": "^3.15.1",
     "next": "12.1.6",
+    "next-auth": "^4.5.0",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@types/node": "17.0.42",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
+    "autoprefixer": "^10.4.7",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
+    "postcss": "^8.4.14",
+    "prisma": "^3.15.1",
+    "tailwindcss": "^3.1.3",
+    "ts-node": "^10.8.1",
     "typescript": "4.7.3"
   }
 }
