--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@prisma/client": "^3.15.1",
     "next": "12.1.6",
     "next-auth": "^4.5.0",
+    "next-superjson": "^0.0.3",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "superjson": "^1.9.1"
   },
   "devDependencies": {
     "@types/node": "17.0.42",
