--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "@mui/material": "^5.8.4",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^3.15.1",
+    "nanoid": "^4.0.0",
     "next": "12.1.6",
     "next-auth": "^4.5.0",
     "next-superjson": "^0.0.3",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
-    "react-voice-recorder": "^2.1.2",
+    "react-media-recorder": "^1.6.5",
+    "sharp": "^0.30.6",
     "superjson": "^1.9.1"
   },
   "devDependencies": {
