add graphql server

--- a/package.json
+++ b/package.json
@@ -10,18 +10,30 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint components/** utils/** pages/**",
-    "lint:fix": "eslint --fix components/** utils/** pages/**"
+    "lint:fix": "eslint --fix components/** utils/** pages/**",
+    "generate_build": "cosmo && npx prisma generate && prettier --config .prettierrc prisma/generated/graphql/**/*.ts --write && next build",
+    "cosmo": "cosmo && prettier --config .prettierrc prisma/generated/graphql/**/*.ts --write",
+    "generate": "npx prisma generate && yarn cosmo",
+    "migrate-dev": "npx prisma migrate dev",
+    "migrate-deploy": "npx prisma migrate deploy"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.8",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.8.4",
     "@next-auth/prisma-adapter": "^1.0.3",
+    "@prevalentware/prisma-cosmo": "0.1.11",
     "@prisma/client": "^3.15.1",
+    "apollo-server-micro": "^3.9.0",
+    "apollo3-cache-persist": "^0.14.0",
+    "graphql": "^16.5.0",
+    "micro": "^9.3.4",
     "nanoid": "^4.0.0",
     "next": "12.1.6",
     "next-auth": "^4.5.0",
     "next-superjson": "^0.0.3",
+    "nextjs-cors": "^2.1.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
