--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "lint": "eslint components/** utils/** pages/**",
     "lint:fix": "eslint --fix components/** utils/** pages/**",
     "generate_build": "cosmo && npx prisma generate && prettier --config .prettierrc prisma/generated/graphql/**/*.ts --write && next build",
+    "aurora": "aurora && npx prisma format",
     "cosmo": "cosmo && prettier --config .prettierrc prisma/generated/graphql/**/*.ts --write",
-    "generate": "npx prisma generate && yarn cosmo",
-    "migrate-dev": "npx prisma migrate dev",
-    "migrate-deploy": "npx prisma migrate deploy"
+    "generate": "yarn aurora && npx prisma generate && yarn cosmo",
+    "migrate-dev": "yarn aurora && npx prisma migrate dev",
+    "migrate-deploy": "yarn aurora && npx prisma migrate deploy"
   },
   "dependencies": {
     "@apollo/client": "^3.6.8",
@@ -34,8 +35,10 @@
     "next-auth": "^4.5.0",
     "next-superjson": "^0.0.3",
     "nextjs-cors": "^2.1.1",
+    "prisma-aurora": "^1.3.9",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-draggable": "^4.4.5",
     "react-icons": "^4.4.0",
     "react-media-recorder": "^1.6.5",
     "sharp": "^0.30.6",
