--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@prisma/client": "^3.15.1",
     "apollo-server-micro": "^3.9.0",
     "apollo3-cache-persist": "^0.14.0",
+    "aws-sdk": "^2.1156.0",
     "graphql": "^16.5.0",
     "micro": "^9.3.4",
     "nanoid": "^4.0.0",
@@ -40,7 +41,10 @@
     "react-dom": "18.1.0",
     "react-draggable": "^4.4.5",
     "react-icons": "^4.4.0",
+    "react-markdown": "^8.0.3",
     "react-media-recorder": "^1.6.5",
+    "react-rte": "^0.16.5",
+    "react-toastify": "^9.0.4",
     "sharp": "^0.30.6",
     "superjson": "^1.9.1"
   },
@@ -48,6 +52,7 @@
     "@types/node": "17.0.42",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
+    "@types/react-rte": "^0.16.3",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
     "autoprefixer": "^10.4.7",
