--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "jest --watch",
     "lint": "eslint components/** utils/** pages/**",
     "lint:fix": "eslint --fix components/** utils/** pages/**",
     "generate_build": "cosmo && npx prisma generate && prettier --config .prettierrc prisma/generated/graphql/**/*.ts --write && next build",
@@ -30,6 +31,7 @@
     "apollo3-cache-persist": "^0.14.0",
     "aws-sdk": "^2.1157.0",
     "graphql": "^16.5.0",
+    "jest-mock-extended": "^2.0.6",
     "micro": "^9.3.4",
     "nanoid": "^4.0.0",
     "next": "12.1.6",
@@ -48,6 +50,9 @@
     "superjson": "^1.9.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@types/jest": "^28.1.2",
     "@types/node": "17.0.42",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
@@ -66,10 +71,13 @@
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-typescript": "^0.14.0",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
     "lint": "^0.7.0",
     "postcss": "^8.4.14",
     "prisma": "^3.15.1",
     "tailwindcss": "^3.1.3",
+    "ts-jest": "^28.0.5",
     "ts-node": "^10.8.1",
     "typescript": "4.7.3"
   }
