--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prevalentware/prisma-cosmo": "0.1.11",
     "@prisma/client": "^3.15.1",
+    "@types/react-table": "^7.7.12",
     "apollo-server-micro": "^3.9.0",
     "apollo3-cache-persist": "^0.14.0",
     "aws-sdk": "^2.1157.0",
@@ -39,6 +40,7 @@
     "next-auth": "^4.5.0",
     "next-superjson": "^0.0.3",
     "nextjs-cors": "^2.1.1",
+    "nodemailer": "^6.7.5",
     "prisma-aurora": "^1.3.9",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -46,6 +48,7 @@
     "react-icons": "^4.4.0",
     "react-media-recorder": "^1.6.5",
     "react-rte": "^0.16.5",
+    "react-table": "^7.8.0",
     "react-toastify": "^9.0.4",
     "sharp": "^0.30.6",
     "superjson": "^1.9.1"
