--- a/package.json
+++ b/package.json
@@ -79,6 +79,8 @@
     "jest-environment-jsdom": "^28.1.1",
     "lint": "^0.7.0",
     "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.11",
     "prisma": "^3.15.1",
     "tailwindcss": "^3.1.3",
     "ts-jest": "^28.0.5",
