--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.8.4",
     "@next-auth/prisma-adapter": "^1.0.3",
-    "@prevalentware/prisma-cosmo": "0.1.11",
+    "@prevalentware/prisma-cosmo": "^0.1.12",
     "@prisma/client": "^3.15.1",
     "@types/react-table": "^7.7.12",
     "apollo-server-micro": "^3.9.0",
