--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cuid": "^2.1.8",
     "graphql": "^16.5.0",
     "jest-mock-extended": "^2.0.6",
+    "lodash": "^4.17.21",
     "micro": "^9.3.4",
     "nanoid": "^4.0.0",
     "next": "12.1.6",
@@ -57,6 +58,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^28.1.2",
+    "@types/lodash": "^4.14.182",
     "@types/node": "17.0.42",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
