--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@prevalentware/prisma-cosmo": "^0.1.12",
     "@prisma/client": "^3.15.1",
     "@types/react-table": "^7.7.12",
+    "apexcharts": "^3.35.3",
     "apollo-server-micro": "^3.9.0",
     "apollo3-cache-persist": "^0.14.0",
     "aws-sdk": "^2.1157.0",
@@ -44,6 +45,7 @@
     "nodemailer": "^6.7.5",
     "prisma-aurora": "^1.3.9",
     "react": "18.1.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "18.1.0",
     "react-draggable": "^4.4.5",
     "react-icons": "^4.4.0",
