add functionality for sending an active log in session in an e-mail

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "apollo-server-micro": "^3.9.0",
     "apollo3-cache-persist": "^0.14.0",
     "aws-sdk": "^2.1157.0",
+    "crypto": "^1.0.1",
     "cuid": "^2.1.8",
     "exceljs": "^4.3.0",
     "file-saver": "^2.0.5",
@@ -66,6 +67,7 @@
     "@types/jest": "^28.1.2",
     "@types/lodash": "^4.14.182",
     "@types/node": "17.0.42",
+    "@types/nodemailer": "^6.4.4",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
     "@types/react-rte": "^0.16.3",
