add tutorial for participants

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "exceljs": "^4.3.0",
     "file-saver": "^2.0.5",
     "graphql": "^16.5.0",
+    "intro.js-react": "^0.6.0",
     "jest-mock-extended": "^2.0.6",
     "lodash": "^4.17.21",
     "micro": "^9.3.4",
@@ -52,6 +53,7 @@
     "react-dom": "18.1.0",
     "react-draggable": "^4.4.5",
     "react-icons": "^4.4.0",
+    "react-joyride": "^2.5.0",
     "react-loading": "^2.0.3",
     "react-media-recorder": "^1.6.5",
     "react-rte": "^0.16.5",
@@ -72,6 +74,7 @@
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
     "@types/react-rte": "^0.16.3",
+    "@types/reactour": "^1.18.2",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
     "autoprefixer": "^10.4.7",
