--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
     },
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "context/tutorial.tsz"],
   "exclude": ["node_modules"]
 }
